force-app/main/default/objects/Case_Note__c/Case_Note__c.object-meta.xml
<CustomObject>
    <description>this custom object will be used to replicate Tasks and Activities since CC portal users cannot use the standard functionality</description>
    <label>Case Note</label>
    <nameField>
        <displayFormat>CN-{MM}{YY}-{0}</displayFormat>
        <label>Case Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>