force-app/main/default/objects/Case_Note__c/fields/Communication_Date__c.field-meta.xml
<CustomField>
    <fullName>Communication_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Allows user to specify when the communication occurred. Defaults to today.</description>
    <inlineHelpText>Manually specify the date when the communication occurred</inlineHelpText>
    <label>Communication Date</label>
    <type>DateTime</type>
</CustomField>