force-app/main/default/objects/Case_Note__c/fields/Communication_Result__c.field-meta.xml
<CustomField>
    <fullName>Communication_Result__c</fullName>
    <label>Communication Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>need values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>