force-app/main/default/objects/Case_Note__c/fields/Intervention_Type__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Type__c</fullName>
    <label>Intervention Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resource Navigation</fullName>
            </value>
            <value>
                <fullName>Career Coaching</fullName>
            </value>
            <value>
                <fullName>Academic Advising</fullName>
            </value>
            <value>
                <fullName>Mental Health Support</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
                <isActive>false</isActive>
                <label>Outreach</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>