force-app/main/default/objects/Case_Note__c/fields/Related_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Contact object</description>
    <label>Related To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>Case_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>